# suroi-client

./: .gitmodules  CMakeLists.txt  README.md
assets/: normal-c6581886@1x.json  normal-cf5a29b4@1x.json
src/: main.cpp
